# WebsocketsClient

./: CMakeLists.txt  README.md
resources/: project.rc  resources.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h
